Prepare test structure